src/test/deca/syntax/valid/This.deca
//test this

class Thing {

    int i;
    
    int getI(){
        this.i = i;
    }
}


