src/test/deca/syntax/invalid/sansobjet/lex_floathex_min2_invalid.deca
// test borne inferieur
// invalid
{
 float i = 0xAaf.bcP-200;
}
